--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 ###############################################
 *.xd
 design
+node_modules
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
